; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_systrace.c_machtrace_attach.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_systrace.c_machtrace_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dtrace_probe = common dso_local global i8* null, align 8
@machtrace_probe = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [10 x i8] c"machtrace\00", align 1
@S_IFCHR = common dso_local global i32 0, align 4
@DDI_PSEUDO = common dso_local global i32 0, align 4
@DDI_FAILURE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [10 x i8] c"mach_trap\00", align 1
@machtrace_attr = common dso_local global i32 0, align 4
@DTRACE_PRIV_USER = common dso_local global i32 0, align 4
@machtrace_pops = common dso_local global i32 0, align 4
@machtrace_id = common dso_local global i32 0, align 4
@systrace_stub = common dso_local global i32 0, align 4
@DDI_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @machtrace_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @machtrace_attach(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i8*, i8** @dtrace_probe, align 8
  store i8* %4, i8** @machtrace_probe, align 8
  %5 = call i32 (...) @membar_enter()
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @S_IFCHR, align 4
  %8 = load i32, i32* @DDI_PSEUDO, align 4
  %9 = call i64 @ddi_create_minor_node(i32* %6, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %7, i32 0, i32 %8, i32 0)
  %10 = load i64, i64* @DDI_FAILURE, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %16, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* @DTRACE_PRIV_USER, align 4
  %14 = call i64 @dtrace_register(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32* @machtrace_attr, i32 %13, i32* null, i32* @machtrace_pops, i32* null, i32* @machtrace_id)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %12, %1
  store i8* bitcast (i32* @systrace_stub to i8*), i8** @machtrace_probe, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @ddi_remove_minor_node(i32* %17, i32* null)
  %19 = load i64, i64* @DDI_FAILURE, align 8
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %2, align 4
  br label %23

21:                                               ; preds = %12
  %22 = load i32, i32* @DDI_SUCCESS, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %16
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @membar_enter(...) #1

declare dso_local i64 @ddi_create_minor_node(i32*, i8*, i32, i32, i32, i32) #1

declare dso_local i64 @dtrace_register(i8*, i32*, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @ddi_remove_minor_node(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
